objects/project_cloud__Cross_Project_Dependency__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Project_Child__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Cross Project Dependencies (Child Project)</relationshipLabel>
        <relationshipName>Cross_Project_Dependencies3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Cross Project Dependencies (Parent Project)</relationshipLabel>
        <relationshipName>Cross_Project_Dependencies2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Task_Child__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Cross Project Dependencies (Child Project Task)</relationshipLabel>
        <relationshipName>Cross_Project_Dependencies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Task_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Cross Project Dependencies</relationshipLabel>
        <relationshipName>Cross_Project_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cross Project Dependency</label>
    <nameField>
        <displayFormat>CPD-{0}</displayFormat>
        <label>Cross Project Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross Project Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>